Feature: Password Reset - The user can restore password from his account. - Swagger documentation now is more detailed. Added examples for password reset methods. - Timezone for Carbon has been  changed.
